# simple-agent

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  pyproject.toml
assets/: demo.mov
backend/: README.md  main.py  pyproject.toml
backend/src/simple_agent/: __init__.py  format.py  fractional_index.py  models.py  stream.py
backend/tests/: test_agent_process.py  test_fractional_index.py  test_index_system.py  test_models.py  test_session_inspect_cli.py  test_task_lifecycle.py  test_task_render.py  test_token_estimation.py  test_tool_inspect.py
docs/superpowers/plans/: 2026-05-31-floating-chat-panel.md  2026-06-01-session-runner-refactor.md  2026-06-02-handle-compact.md  2026-06-06-task-lifecycle-refactor.md
docs/superpowers/specs/: 2026-05-31-floating-chat-panel-design.md  2026-05-31-workspace-file-editor-design.md  2026-06-02-handle-compact-design.md  2026-06-02-runner-compact-threshold-design.md
frontend/: .gitignore  package-lock.json
frontend/src/app/: page.tsx
frontend/src/lib/: stream-converter.ts  workspace-api.ts  workspace-language.ts  workspace-sample-data.ts  workspace-store.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/workspace/: page.tsx
src/components/workspace/: file-tree.tsx  file-view-switcher.tsx  markdown-preview.tsx  markdown-wysiwyg-editor.tsx  raw-file-editor.tsx  workspace-chat-panel.tsx  workspace-editor-shell.tsx  workspace-picker.tsx
src/lib/: backend-client.ts  stream-converter.ts  workspace-sample-data.ts  workspace-types.ts
src/simple_agent/: __init__.py  format.py  globals.py  json_utils.py  log.py  message_store.py  models.py  normal_process.py  process.py  run_log.py  token_estimation.py
src/simple_agent/cli/: repo_index.py  session_inspect.py  session_log_playback.py  task_msg_log.py  tool_inspect.py
src/simple_agent/db/: db.py
src/simple_agent/index/: dir_walker.py  indexer.py  markdown_walker.py  models.py  python_walker.py  tree.py
src/simple_agent/process/: __init__.py  agent_process.py  central_control.py  collect_result_process.py  commit_collect_result_process.py  explore_process.py  explore_runner.py  normal_process.py  plan_runner.py  process.py  (+4 more)
tests/: debug_chat_stream.py  manual_pause_turn_cli.py  manual_session_cli.py  manual_session_dump.py  manual_session_log_playback.py  test_agent.py  test_agent_process.py  test_agent_process_run.py  test_agent_run_state.py  test_central_control.py  test_collect_result_process.py  test_commit_collect_result_process.py  test_diff_tool.py  test_execution_logger.py  test_explore_process.py  test_explore_runner.py  test_index_cli.py  test_index_system.py  test_plan_runner.py  test_process.py  test_runner_storage.py  test_session.py  test_session_inspect_cli.py  test_session_log_playback.py  test_session_manager.py  test_session_runner.py  test_single_run_process.py  test_sub_task_process.py  test_task_builder.py  test_task_lifecycle.py  test_task_manager.py  test_task_render.py  test_task_tools.py  test_task_tree.py  test_token_estimation.py  test_tool_inspect.py  test_tool_storage.py
(+77 files in other folders)
