[project]
name = "simple-agent"
version = "0.1.0"
description = "CLI application for building and running agents with pi-agent runtime"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "pi-ai",
    "pi-agent",
    "pi-coding-agent",
]

[project.scripts]
tool-inspect = "simple_agent.cli.tool_inspect:main"
task-msg-log = "simple_agent.cli.task_msg_log:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
pi-ai = { git = "https://github.com/vamsi/pi", branch = "main", subdirectory = "packages/pi-ai" }
pi-agent = { git = "https://github.com/vamsi/pi", branch = "main", subdirectory = "packages/pi-agent" }
pi-tui = { git = "https://github.com/vamsi/pi", branch = "main", subdirectory = "packages/pi-tui" }
pi-coding-agent = { git = "https://github.com/vamsi/pi", branch = "main", subdirectory = "packages/pi-coding-agent" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

