[project]
name = "simple-agent"
version = "0.1.0"
description = "CLI application for building and running agents with pi-agent runtime"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "gitpython",
    "jinja2>=3.0.0",
    "pathspec>=1.1.1",
    "pi-agent",
    "pi-ai",
    "pi-coding-agent",
    "pi-tui",
    "python-dotenv>=1.2.1",
    "socksio>=1.0.0",
    "sqlmodel>=0.0.38",
    "tree-sitter>=0.25.2",
    "uvicorn>=0.34.0",
]

[project.scripts]
tool-inspect = "simple_agent.cli.tool_inspect:main"
task-msg-log = "simple_agent.cli.task_msg_log:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
pi-ai = { workspace = true }
pi-agent = { workspace = true }
pi-tui = { workspace = true }
pi-coding-agent = { workspace = true }

[tool.uv.workspace]
members = [
    "external/pi-ai",
    "external/pi-agent",
    "external/pi-tui",
    "external/pi-coding-agent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
